# MbtiByFace

./: README.md
fastAPI/: Dockerfile  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  sql_app.db
memo/: deploy.md
vue2/: package-lock.json  package.json
vue2/src/: App.vue
vue2/src/api/: api.js
vue2/src/router/: index.js
vue2/src/store/: index.js
vue2/src/store/modules/: celebrity.js
vue2/src/views/: AboutView.vue  HomeView.vue  ResultView.vue
