[tool.poetry]
name = "mbtibyface"
version = "0.1.0"
description = ""
authors = ["donghwan <ldh793@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
pymysql = "^1.0.2"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.2"
dlib = "^19.24.0"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
